modificación a vistas wupalmer, tbk y leacockchodorow con template 2, modificación de bootstrap para la utilización de jquery directamente de primefaces

--- a/ProyectoPINGESO-web/src/main/webapp/Recursos/css/bootstrap.css
+++ b/ProyectoPINGESO-web/src/main/webapp/Recursos/css/bootstrap.css
@@ -79,6 +79,19 @@ footer{
     background: -moz-linear-gradient(#204d74, grey);
     background: -o-linear-gradient(#204d74, grey);
     color: #fff;    
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    
+    
+    
+}
+
+.tam_min{
+    min-height: 1800 px;
     
 }
 
@@ -101,6 +114,7 @@ body {
  *background: -o-linear-gradient(#cc9900,orange);
 */
 backgroud-color:white;
+
   
 }
 article,
